<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BC17</string>
    <string name="hello_world">Hello world!</string>
    <string name="sync_url">http://10.153.175.47:8080/gnode/abstracts_up.json</string>
	<string name="old_dummy_sync_time">2015-07-09T08:24:50.833Z</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_another">AnotherActivity</string>
    <string name="title_activity_main_annotations">MainAnnotationsActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_abstracts">Abstracts</string>
    <string name="title_activity_newsroom">News Room</string>
    <string name="searchHint">Search Abstracts...</string>
    <string name="title_activity_favorite_abstracts">Favorite Abstracts</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_generalInfo">General Information</string>
    <string name="AcknowledgementHeading">Acknowledgements</string>
    <string name="referencesHeading">References</string>
    <string name="splashTiming">3000</string>
    <string name="title_activity_schedule_main">Schedule</string>
    <string name="title_activity_schedule_item_extended">Schedule Detail</string>
    <string name="updating_dialog_text">Updating...</string>
    <string name="loading_dialog_text">Loading...</string>
    <string name="loading_abstracts_dialog_text"><b>Loading...Please Wait!</b> \nThis may take a minute</string>
    <string name="track_chair_label">Chaired By:&#160;&#160;</string>
    <string name="menu_button_abstract_text">Abstracts</string>
    <string name="menu_button_news_text">News</string>
    <string name="menu_button_maps_text">Map</string>
    <string name="menu_button_schedule_text">Schedule</string>
    <string name="menu_button_favorites_text">Favorites</string>
    <string name="menu_genInfo_text">Info</string>
    <string name="menu_aboutAPP_text">About</string>
    <string name="menu_welcome_text">Welcome&#160;|&#160;G-Node</string>
    <string name="menu_updateAbs_text">Sync</string>
    <string name="schedule_detail_label_date">Date:</string>
    <string name="schedule_detail_label_time">Time:</string>
    <string name="schedule_detail_label_author">Author:</string>
    <string name="schedule_detail_label_location">Location:</string>
    <string name="schedule_detail_btn_openAbstract_text">Open Abstract</string>
    <string name="schedule_detail_tracksInSession_Heading">Tracks in this Session:</string>
    <string name="schedule_track_detail_hint_text">Click the button above to navigate to respective track detail</string>
    <string name="schedule_detail_eventsInTrack_Heading">Events in this Track:</string>
     <string name="schedule_detail_events_detail">Event Details</string>
    <string name="schedule_event_detail_hint_text"></string>
    <string name="schedule_event_keynote">Keynote</string>
    <string name="title_activity_abstract_figures">Abstract Figures</string>
    <string name="splash_data_warning">Data provided by INCF</string>
    <string name="absract_menue">Abstracts</string>
    <string name="schedule_menue">Schedule</string>
    <string name="favorites_menue">Favorites</string>
    <string name="map_menue">Map</string>
    <string name="welcome">Welcome to the Bernstein Conference 2017</string>
    
    <string-array name="groupid2str">
        <item>D</item>
        <item>P</item>
        <item>IP</item>
        <item>DI</item>
        <item>PI</item>
    </string-array>
        <string name="info">Info</string>

</resources>