<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/android:list"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content" >

	<RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:background="@color/schedule_event"
	     >
	
	    <TextView
	        android:id="@+id/schedule_event_title"
	        android:paddingTop="10dp"
	        android:paddingBottom="10dp"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center"
			android:textColor="@color/schedule_event_title"
	        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
	        android:text="@string/hello_world" />
	
		<TextView
	        android:id="@+id/schedule_event_subtitle"
	        android:paddingTop="10dp"
	        android:paddingBottom="10dp"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center"
			android:textColor="#0a5690"
			android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
	        android:layout_below="@+id/schedule_event_title"
	        android:text="@string/hello_world" />
	
		<TextView
	        android:id="@+id/schedule_event_type"
	        android:layout_marginRight="15dp"
	        android:layout_alignParentRight="true"
	        android:paddingLeft="3dp"
	        android:paddingRight="3dp"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="right"
			android:textColor="#e7e7e5"
			android:textSize="12sp"
			android:layout_below="@+id/schedule_event_subtitle"
	        android:text="Type of Event" />
		
		<TableLayout 
		    android:id="@+id/schedule_event_detail_table"
		    android:layout_below="@+id/schedule_event_type"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:paddingLeft="15dp"
		    android:stretchColumns="1">	
		
			<TableRow>
		        <TextView
		            android:layout_weight="1"
			        android:paddingTop="10dp"
			        android:paddingBottom="10dp"
			        android:paddingLeft="5dp"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:gravity="center_vertical"
					android:textColor="#0a5690"
					android:drawablePadding="5dp"
			        android:drawableLeft="@drawable/icon_calendar"
			        android:text="@string/schedule_detail_label_date" />
		        <TextView
		            android:layout_weight="1"
		            android:id="@+id/schedule_event_date"
		            android:paddingTop="10dp"
			        android:paddingBottom="10dp"
			        android:paddingLeft="5dp"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:gravity="center"
					android:textColor="#0a5690"
		            android:text="Event Date"
		            android:padding="3dip" />
	    	</TableRow>
		    	    	
		    <TableRow>
		        <TextView
		            android:layout_weight="1"	            
			        android:paddingTop="10dp"
			        android:paddingBottom="10dp"
			        android:paddingLeft="5dp"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:gravity="center_vertical"
					android:textColor="#0a5690"
					android:drawablePadding="5dp"
			        android:drawableLeft="@drawable/icon_clock"
			        android:text="@string/schedule_detail_label_time" />
		        
		        <TextView
		            android:layout_weight="1"	            
		            android:id="@+id/schedule_event_time"
		            android:paddingTop="10dp"
			        android:paddingBottom="10dp"
			        android:paddingLeft="5dp"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:gravity="center"
					android:textColor="#0a5690"
		            android:text="Event Time goes here"
		            android:padding="3dip" />
	    	</TableRow>
		    
		    <TableRow>
		        <TextView
		            android:layout_weight="1"	            
			        android:paddingTop="10dp"
			        android:paddingBottom="10dp"
			        android:paddingLeft="5dp"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:gravity="center_vertical"
					android:textColor="#0a5690"
					android:drawablePadding="5dp"
			        android:drawableLeft="@drawable/speaker_avatar"
			        android:text="@string/schedule_detail_label_author" />
		        
		        <TextView
		            android:layout_weight="1"
		            android:id="@+id/schedule_event_author"
		            android:paddingTop="10dp"
			        android:paddingBottom="10dp"
			        android:paddingLeft="5dp"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:gravity="center"
					android:textColor="#0a5690"
		            android:text="Author name goes here"
		            android:padding="3dip" />
	    	</TableRow>
	
			<TableRow>
		        <TextView
		            android:layout_weight="1"
		            android:id="@+id/schedule_event_location_icon"	            
			        android:paddingTop="10dp"
			        android:paddingBottom="10dp"
			        android:paddingLeft="5dp"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:gravity="center_vertical"
					android:textColor="#0a5690"
					android:drawablePadding="5dp"
			        android:drawableLeft="@drawable/icon_location"
			        android:text="@string/schedule_detail_label_location" />
		        <TextView
		            android:layout_weight="1"	            
		            android:id="@+id/schedule_event_location"
		            android:paddingTop="10dp"
			        android:paddingBottom="10dp"
			        android:paddingLeft="5dp"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:gravity="center"
					android:textColor="#0a5690"
		            android:text="Event Location"
		            android:padding="3dip" />
	    	</TableRow>	    
	
				
		    	
	    </TableLayout>
		
	    <Button 
	        android:id="@+id/btn_launch_Abstract_from_event"
	        android:text="@string/schedule_detail_btn_openAbstract_text"
	        android:gravity="center"
	        android:layout_marginLeft="35dp"
	        android:layout_marginRight="35dp"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/schedule_event_detail_table"  />
	    
	</RelativeLayout>
</ScrollView>